kubernetes/apps/lakehouse/namespace.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/namespace.json
---
apiVersion: v1
kind: Namespace
metadata:
  name: lakehouse
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    istio.io/dataplane-mode: ambient
    goldilocks.fairwinds.com/enabled: "true"
