kubernetes/apps/lakehouse/networkpolicy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/v1/networkpolicy.json
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: &app allow-all
  namespace: lakehouse
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector: {}
  egress:
    - to:
        - namespaceSelector: {}
          podSelector: {}
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.244.0.0/16
              - 10.96.0.0/12
